modification pom.xml java fx